Fixed height on input 'add todo'

--- a/src/components/Header/TodoNew/TodoNew.module.sass
+++ b/src/components/Header/TodoNew/TodoNew.module.sass
@@ -4,6 +4,7 @@
     box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03)
     width: 100%
     font-size: 24px
+    height: 66px
 
     &::placeholder
         font-style: italic
